--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
 		<quarkus.platform.version>2.2.3.Final</quarkus.platform.version>
 		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+		<keycloak.version>15.0.2</keycloak.version>
+		<testcontainers.version>1.15.2</testcontainers.version>
+
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -41,6 +44,10 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-oidc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-container-image-docker</artifactId>
 		</dependency>
 		<dependency>
@@ -58,10 +65,6 @@
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-websockets</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-smallrye-jwt</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
