--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,14 +7,14 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/bridgeq .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/security-openid-connect-web-authentication .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/bridgeq
+# docker run -i --rm -p 8080:8080 quarkus/security-openid-connect-web-authentication
 #
 ###
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.3
 WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
