service and other apis now handling roles properly. index.html updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,45 @@
 quarkus.keycloak.devservices.realm-path=quarkus-realm.json
 quarkus.oidc.client-id=alyson
 quarkus.oidc.application-type=WEB_APP
-quarkus.http.auth.permission.authenticated.paths=/*
-quarkus.http.auth.permission.authenticated.policy=authenticated
-quarkus.log.category."com.gargoylesoftware.htmlunit.DefaultCssErrorHandler".level=ERROR
+
+quarkus.http.auth.policy.user-policy1.roles-allowed=user
+quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
+quarkus.http.auth.policy.test-policy1.roles-allowed=test
+quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
+
+quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
+quarkus.http.auth.permission.permit1.policy=permit
+quarkus.http.auth.permission.permit1.methods=GET
+
+quarkus.http.auth.permission.service.paths=/service,/service/*
+quarkus.http.auth.permission.service.policy=admin-policy1
+quarkus.http.auth.permission.service.methods=GET
+
 
 quarkus.oidc.token.refresh-expired=false
 
 quarkus.oidc.logout.path=/logout
-#quarkus.oidc.logout.post-logout-path=/
-
+quarkus.oidc.logout.post-logout-path=/
 # Only the authenticated users can initiate a logout:
-#quarkus.http.auth.permission.authenticated.paths=/logout
-#quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.http.auth.permission.authenticated.paths=/logout
+quarkus.http.auth.permission.authenticated.policy=authenticated
+
+# Logged out users should be returned to the /welcome.html site which will offer an option to re-login:
+quarkus.http.auth.permission.authenticated.paths=/index.html
+quarkus.http.auth.permission.authenticated.policy=permit
+
+# Enable Policy Enforcement
+
+
+
+#quarkus.http.auth.permission.roles1.paths=/api/events/init/*
+#quarkus.http.auth.permission.roles1.policy=user-policy1
+#quarkus.http.auth.permission.roles1.methods=GET,HEAD
+
+#quarkus.http.auth.permission.roles2.paths=/service/*
+#quarkus.http.auth.permission.roles2.policy=admin-policy1
+
+
 
 # Logged out users should be returned to the /welcome.html site which will offer an option to re-login:
 #quarkus.http.auth.permission.authenticated.paths=/index.html
@@ -35,8 +62,14 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.color=false
 
 quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.category."com.gargoylesoftware.htmlunit.DefaultCssErrorHandler".level=ERROR
 
 quarkus.resteasy.gzip.enabled=true 
 quarkus.resteasy.gzip.max-input=10M
 
 quarkus.banner.path=logo.txt
+
+
+%test.mode=test
+%dev.mode=dev
+%prod.mode=prod
