--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ quarkus.http.auth.permission.service.paths=/service,/service/*
 quarkus.http.auth.permission.service.policy=admin-policy1
 quarkus.http.auth.permission.service.methods=GET
 
+quarkus.http.auth.permission.web.paths=/index.html
+quarkus.http.auth.permission.web.policy=user-policy1
+quarkus.http.auth.permission.web.methods=GET,POST
+
 
 quarkus.oidc.token.refresh-expired=false
 
