--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #quarkus.oidc.auth-server-url=https://keycloak-office.gada.io/auth/realms/internmatch
-%prod.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/quarkus}
-quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+%prod.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/genny}
+quarkus.keycloak.devservices.realm-path=genny-realm.json
 quarkus.oidc.client-id=alyson
 quarkus.oidc.application-type=WEB_APP
 
