--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,7 +52,7 @@ quarkus.http.auth.permission.authenticated.policy=permit
 #quarkus.http.auth.permission.authenticated.policy=permit
 
 #quarkus.devservices.enabled=true
-#quarkus.keycloak.devservices.image-name=quay.io/keycloak/keycloak:15.0.2
+quarkus.keycloak.devservices.image-name=jboss/keycloak:15.0.2
 #quarkus.keycloak.deservices.service-name=quarkus
 #quarkus.keycloak.devservices.realm-path=
 
