Use qurkus realm for test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,64 +1,9 @@
-#quarkus.oidc.auth-server-url=https://keycloak-office.gada.io/auth/realms/internmatch
-%prod.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/genny}
-quarkus.keycloak.devservices.realm-path=genny-realm.json
-quarkus.oidc.client-id=alyson
-quarkus.oidc.application-type=WEB_APP
-
-quarkus.http.auth.policy.user-policy1.roles-allowed=user
-quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
-quarkus.http.auth.policy.test-policy1.roles-allowed=test
-quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
-
-quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
-quarkus.http.auth.permission.permit1.policy=permit
-quarkus.http.auth.permission.permit1.methods=GET
-
-quarkus.http.auth.permission.service.paths=/service,/service/*
-quarkus.http.auth.permission.service.policy=admin-policy1
-quarkus.http.auth.permission.service.methods=GET
-
-quarkus.http.auth.permission.web.paths=/index.html
-quarkus.http.auth.permission.web.policy=user-policy1
-quarkus.http.auth.permission.web.methods=GET,POST
-
-
-quarkus.oidc.token.refresh-expired=false
-
-quarkus.oidc.logout.path=/logout
-quarkus.oidc.logout.post-logout-path=/
-# Only the authenticated users can initiate a logout:
-quarkus.http.auth.permission.authenticated.paths=/logout
+%prod.quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+quarkus.oidc.client-id=frontend
+quarkus.oidc.application-type=web-app
+quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
-
-# Logged out users should be returned to the /welcome.html site which will offer an option to re-login:
-quarkus.http.auth.permission.authenticated.paths=/index.html
-quarkus.http.auth.permission.authenticated.policy=permit
-
-# Enable Policy Enforcement
-
-
-
-#quarkus.http.auth.permission.roles1.paths=/api/events/init/*
-#quarkus.http.auth.permission.roles1.policy=user-policy1
-#quarkus.http.auth.permission.roles1.methods=GET,HEAD
-
-#quarkus.http.auth.permission.roles2.paths=/service/*
-#quarkus.http.auth.permission.roles2.policy=admin-policy1
-
-
-
-# Logged out users should be returned to the /welcome.html site which will offer an option to re-login:
-#quarkus.http.auth.permission.authenticated.paths=/index.html
-#quarkus.http.auth.permission.authenticated.policy=permit
-
-#quarkus.devservices.enabled=true
-quarkus.keycloak.devservices.image-name=jboss/keycloak:15.0.2
-#quarkus.keycloak.deservices.service-name=quarkus
-#quarkus.keycloak.devservices.realm-path=
-
-#quarkus.kafka.devservices.image-name=vectorized/redpanda:v21.5.5
-#quarkus.kafka.devservices.service-name=kafka
-#quarkus.kafka.devservices.topic-partitions webcmds webdata answers
 
 
 quarkus.log.console.enable=true
@@ -77,3 +22,29 @@ quarkus.banner.path=logo.txt
 %test.mode=test
 %dev.mode=dev
 %prod.mode=prod
+
+#quarkus.http.auth.policy.user-policy1.roles-allowed=user
+#quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
+#quarkus.http.auth.policy.test-policy1.roles-allowed=test
+#quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
+#
+#quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
+#quarkus.http.auth.permission.permit1.policy=permit
+##quarkus.http.auth.permission.permit1.methods=GET
+#
+#quarkus.http.auth.permission.service.paths=/service,/service/*
+#quarkus.http.auth.permission.service.policy=admin-policy1
+##quarkus.http.auth.permission.service.methods=GET
+#
+#quarkus.http.auth.permission.web.paths=/index.html
+#quarkus.http.auth.permission.web.policy=user-policy1
+##quarkus.http.auth.permission.web.methods=GET,POST
+#
+#
+#quarkus.oidc.token.refresh-expired=false
+#
+#quarkus.oidc.logout.path=/logout
+#quarkus.oidc.logout.post-logout-path=/
+## Only the authenticated users can initiate a logout:
+#quarkus.http.auth.permission.logout.paths=/logout
+#quarkus.http.auth.permission.logout.policy=authenticated
