api/init.events ok, service ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 quarkus.keycloak.devservices.realm-path=quarkus-realm.json
 quarkus.oidc.client-id=frontend
 quarkus.oidc.application-type=web-app
-quarkus.http.auth.permission.authenticated.paths=/*
-quarkus.http.auth.permission.authenticated.policy=authenticated
-
+#quarkus.http.auth.permission.authenticated.paths=/*
+#quarkus.http.auth.permission.authenticated.policy=authenticated
+#
 
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
@@ -23,21 +23,21 @@ quarkus.banner.path=logo.txt
 %dev.mode=dev
 %prod.mode=prod
 
-#quarkus.http.auth.policy.user-policy1.roles-allowed=user
-#quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
-#quarkus.http.auth.policy.test-policy1.roles-allowed=test
-#quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
+quarkus.http.auth.policy.user-policy1.roles-allowed=user
+quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
+quarkus.http.auth.policy.test-policy1.roles-allowed=test
+quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
 #
-#quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
-#quarkus.http.auth.permission.permit1.policy=permit
+quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
+quarkus.http.auth.permission.permit1.policy=permit
 ##quarkus.http.auth.permission.permit1.methods=GET
 #
 #quarkus.http.auth.permission.service.paths=/service,/service/*
 #quarkus.http.auth.permission.service.policy=admin-policy1
 ##quarkus.http.auth.permission.service.methods=GET
 #
-#quarkus.http.auth.permission.web.paths=/index.html
-#quarkus.http.auth.permission.web.policy=user-policy1
+quarkus.http.auth.permission.web.paths=/index.html
+quarkus.http.auth.permission.web.policy=authenticated
 ##quarkus.http.auth.permission.web.methods=GET,POST
 #
 #
