--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,8 +43,8 @@ quarkus.http.auth.permission.web.policy=authenticated
 #
 #quarkus.oidc.token.refresh-expired=false
 #
-#quarkus.oidc.logout.path=/logout
-#quarkus.oidc.logout.post-logout-path=/
-## Only the authenticated users can initiate a logout:
-#quarkus.http.auth.permission.logout.paths=/logout
-#quarkus.http.auth.permission.logout.policy=authenticated
+quarkus.oidc.logout.path=/logout
+quarkus.oidc.logout.post-logout-path=/
+# Only the authenticated users can initiate a logout:
+quarkus.http.auth.permission.logout.paths=/logout
+quarkus.http.auth.permission.logout.policy=authenticated
