--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ quarkus.http.auth.permission.permit1.paths=/api/events/init/*
 quarkus.http.auth.permission.permit1.policy=permit
 ##quarkus.http.auth.permission.permit1.methods=GET
 #
-#quarkus.http.auth.permission.service.paths=/service,/service/*
-#quarkus.http.auth.permission.service.policy=admin-policy1
+quarkus.http.auth.permission.service.paths=/service,/service/*
+quarkus.http.auth.permission.service.policy=admin-policy1
 ##quarkus.http.auth.permission.service.methods=GET
 #
 quarkus.http.auth.permission.web.paths=/index.html
