--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-%prod.quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus
+%prod.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/quarkus}
+%dev.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/quarkus}
 quarkus.keycloak.devservices.realm-path=quarkus-realm.json
-quarkus.oidc.client-id=frontend
+quarkus.oidc.client-id=${KEYCLOAK_CLIENT_ID:frontend}
 quarkus.oidc.application-type=web-app
+
+quarkus.oidc.token-state-manager.split-tokens=true
 #quarkus.http.auth.permission.authenticated.paths=/*
 #quarkus.http.auth.permission.authenticated.policy=authenticated
 #
 
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.color=false
+quarkus.log.console.color=true
 
 quarkus.log.category."io.quarkus".level=DEBUG
 quarkus.log.category."com.gargoylesoftware.htmlunit.DefaultCssErrorHandler".level=ERROR
@@ -26,19 +29,20 @@ quarkus.banner.path=logo.txt
 quarkus.http.auth.policy.user-policy1.roles-allowed=user
 quarkus.http.auth.policy.admin-policy1.roles-allowed=admin
 quarkus.http.auth.policy.test-policy1.roles-allowed=test
-quarkus.http.auth.policy.service-policy1.roles-allowed=admin,test,dev,service
+quarkus.http.auth.policy.service-policy1.roles-allowed=test,admin,dev
 #
 quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
 quarkus.http.auth.permission.permit1.policy=permit
 ##quarkus.http.auth.permission.permit1.methods=GET
 #
-quarkus.http.auth.permission.service.paths=/service,/service/*
-quarkus.http.auth.permission.service.policy=admin-policy1
+quarkus.http.auth.permission.service.paths=/api/service/commands/*
+#quarkus.http.auth.permission.service.policy=service-policy1
+quarkus.http.auth.permission.service.policy=authenticated
 ##quarkus.http.auth.permission.service.methods=GET
 #
 quarkus.http.auth.permission.web.paths=/index.html
-quarkus.http.auth.permission.web.policy=authenticated
-##quarkus.http.auth.permission.web.methods=GET,POST
+quarkus.http.auth.permission.web.policy=permit
+quarkus.http.auth.permission.web.methods=GET
 #
 #
 #quarkus.oidc.token.refresh-expired=false
@@ -48,3 +52,11 @@ quarkus.oidc.logout.post-logout-path=/
 # Only the authenticated users can initiate a logout:
 quarkus.http.auth.permission.logout.paths=/logout
 quarkus.http.auth.permission.logout.policy=authenticated
+
+
+life.genny.ApiService/api-rest/url=https://api/qwanda
+life.genny.ApiService/api-rest/scope=javax.inject.Singleton
+
+# This google API KEY should not be visible, however for now the alyson has made it public : TODO remove google lib from Alyson
+google.api.key=AIzaSyDPzyFcOy2vRsHGHiixgESzy5j-IvJWF4Q
+
