Updated to include initial partial service api test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 %dev.quarkus.oidc.auth-server-url=${KEYCLOAK_AUTH_URL:http://localhost:8180/auth/realms/quarkus}
 quarkus.keycloak.devservices.realm-path=quarkus-realm.json
 quarkus.oidc.client-id=${KEYCLOAK_CLIENT_ID:frontend}
+%test.quarkus.oidc.client-id=frontend
 quarkus.oidc.application-type=web-app
 
 quarkus.oidc.token-state-manager.split-tokens=true
@@ -41,7 +42,7 @@ quarkus.http.auth.permission.service.policy=authenticated
 ##quarkus.http.auth.permission.service.methods=GET
 #
 quarkus.http.auth.permission.web.paths=/index.html
-quarkus.http.auth.permission.web.policy=permit
+quarkus.http.auth.permission.web.policy=authenticated
 quarkus.http.auth.permission.web.methods=GET
 #
 #
