--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,10 @@ quarkus.http.auth.policy.service-policy1.roles-allowed=test,admin,dev
 quarkus.http.auth.permission.permit1.paths=/api/events/init/*                                
 quarkus.http.auth.permission.permit1.policy=permit
 ##quarkus.http.auth.permission.permit1.methods=GET
+
+quarkus.http.auth.permission.version1.paths=/version/*                                
+quarkus.http.auth.permission.version1.policy=permit
+
 #
 quarkus.http.auth.permission.service.paths=/api/service/commands/*
 #quarkus.http.auth.permission.service.policy=service-policy1
