--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>life.genny</groupId>
 	<artifactId>bridgeq</artifactId>
 	<version>9.9.0</version>
-
 	<properties>
-		<qwanda.version>${project.version}</qwanda.version>
+		<commons-codec.version>1.15</commons-codec.version>
+		<htmlunit.version>2.36.0</htmlunit.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<quarkus-plugin.version>2.3.0.Final</quarkus-plugin.version>
 		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
 		<quarkus.platform.version>2.3.0.Final</quarkus.platform.version>
+		<qwanda.version>${project.version}</qwanda.version>
 		<surefire.version>3.0.0-M5</surefire.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<htmlunit.version>2.36.0</htmlunit.version>
-		<commons-codec.version>1.15</commons-codec.version>
-
 	</properties>
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -35,7 +31,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<dependencies>
 		<dependency>
 			<groupId>io.quarkus</groupId>
@@ -43,13 +38,21 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-resteasy-jackson</artifactId>
+			<artifactId>quarkus-smallrye-health</artifactId>
 		</dependency>
-		<!-- Test dependencies -->
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-jackson</artifactId>
+			<artifactId>quarkus-reactive-messaging-http</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-arc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-reactive-jackson</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-junit5</artifactId>
@@ -67,22 +70,20 @@
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
-					<groupId>org.apache.httpcomponents</groupId>
 					<artifactId>httpmime</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
 				</exclusion>
 				<exclusion>
-					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20170516</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
@@ -110,9 +111,16 @@
 			<artifactId>qwanda-utils</artifactId>
 			<version>${qwanda.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -183,7 +191,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<profiles>
 		<profile>
 			<id>native</id>
@@ -192,9 +199,6 @@
 					<name>native</name>
 				</property>
 			</activation>
-			<properties>
-				<quarkus.package.type>native</quarkus.package.type>
-			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -208,12 +212,8 @@
 								</goals>
 								<configuration>
 									<systemPropertyVariables>
-										<native.image.path>
-											${project.build.directory}/${project.build.finalName}-runner
-										</native.image.path>
-										<java.util.logging.manager>
-											org.jboss.logmanager.LogManager
-										</java.util.logging.manager>
+										<native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+										<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 										<maven.home>${maven.home}</maven.home>
 										<keycloak.version>${keycloak.version}</keycloak.version>
 									</systemPropertyVariables>
@@ -223,6 +223,9 @@
 					</plugin>
 				</plugins>
 			</build>
+			<properties>
+				<quarkus.package.type>native</quarkus.package.type>
+			</properties>
 		</profile>
 		<profile>
 			<id>docker</id>
