--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-vertx-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-oidc</artifactId>
 		</dependency>
 		<dependency>
@@ -56,11 +61,6 @@
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-junit5</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -108,7 +108,7 @@
 		</dependency>
 		<dependency>
 			<groupId>life.genny</groupId>
-			<artifactId>qwanda-utils</artifactId>
+			<artifactId>genny-verticle-rules</artifactId>
 			<version>${qwanda.version}</version>
 		</dependency>
 		<dependency>
@@ -120,6 +120,16 @@
 			<groupId>org.awaitility</groupId>
 			<artifactId>awaitility</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.luben</groupId>
+			<artifactId>zstd-jni</artifactId>
+			<version>1.3.8-6</version>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-rest-client</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
